add_executable(FBL
    main.cpp
    util.cpp
    FBLUserLL.cpp
    FBLUser.cpp
    FBLComment.cpp
    FBLPost.cpp
    FBLPostLL.cpp)

# add_executable(FBL FBLComment.cpp)
# add_executable(FBL FBLPost.cpp)
# add_executable(FBL FBLPostLL.cpp)
# add_executable(FBL FBLUser.cpp)
# add_executable(FBL FBLUserLL.cpp)
# add_executable(FBL util.cpp)
